Updated to include first full-time job.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 			<!-- About me -->
 			<div class="grid_16 aboutme">
 				<h3>About me</h3>
-				<p>Here you can find a little information about me.</p>
-				<p>My name is Falco Rainier van der Meulen and I'm a Dutch graduate. I studied Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
+				<p>My name is Falco Rainier van der Meulen and I'm a Dutch IT-Specialist for Brunel. I studied Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
 			</div>
 
 			<!-- Skills -->
@@ -72,6 +71,12 @@
 			<h3>Experience</h3>
 			<ul>
 				<li>
+					<h4><strong>IT-Specialist</strong> Brunel Nederland</h4>
+					<span class="place">Rotterdam</span>
+					<span class="dates">Oct. 2020 - Now</span>
+					<p>As an IT-Specialist for Brunel I can be sent to clients to work on projects. I also receive internal training and take courses to achieve certain certificates requested by clients.</p>
+				</li>
+				<li>
 					<h4><strong>Graduation internship</strong> Alten Nederland</h4>
 					<span class="place">Capelle a/d IJssel</span>
 					<span class="dates">Feb. 2020 - Jul. 2020</span>
@@ -101,7 +106,7 @@
 					<span class="place">Rotterdam</span>
 					<span class="dates">Aug. 2016 - Jul. 2020</span>
 					<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
-					<span class="extra"><i>Graduated july 2020.</i></span>
+					<span class="extra"><i>Diploma achieved..</i></span>
 				</li>
 				<li>
 					<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
@@ -116,26 +121,26 @@
 		<!-- Certificates -->
 		<div class="grid_16 certificates">
 			<h3>Certificates</h3>
-			<ul>
-				<li>
-					<h4><strong>Certified Secure - Essential Security</strong></h4>
-					<span class="description">
-						<a href="res/certificates/Certified_Secure_Essential_Security.pdf" download="CS_Essential_Security.pdf">Download PDF</a>
-					</span>
-				</li>
-				<li>
-					<h4><strong>Certified Secure - Safe Internet</strong></h4>
-					<span class="description">
-						<a href="res/certificates/Certified_Secure_Safe_Internet.pdf" download="CS_Safe_Internet.pdf">Download PDF</a>
-					</span>
-				</li>
-				<li>
-					<h4><strong>Certified Secure - Safe Internet Plus</strong></h4>
-					<span class="description">
-						<a href="res/certificates/Certified_Secure_Safe_Internet_Plus.pdf" download="CS_Safe_Internet_Plus.pdf">Download PDF</a>
-					</span>
-				</li>
-			</ul>
+			<div class="grid_8">
+				<h4><strong>Certified Secure</strong></h4>
+				<span class="description">
+					<a href="res/certificates/Certified_Secure_Essential_Security.pdf">Essential Security</a>
+				</span>
+				<br>
+				<span class="description">
+					<a href="res/certificates/Certified_Secure_Safe_Internet.pdf">Safe Internet</a>
+				</span>
+				<br>
+				<span class="description">
+					<a href="res/certificates/Certified_Secure_Safe_Internet_Plus.pdf">Safe Internet Plus</a>
+				</span>
+			</div>
+			<div class="grid_8">
+				<h4><strong>Scrum</strong></h4>
+				<span class="description">
+					Professional Scrum Master I - In progress...
+				</span>
+			</div>
 		</div>
 
 		<!-- Projects -->
@@ -204,6 +209,23 @@
 						<li>
 							<span class="description">Unity</span>
 						</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- SolveDoku -->
+			<div class="grid_16">
+				<h4><strong>SolveDoku</strong></h4>
+				<div class="grid_8">
+					<span class="description">Iterative sudoku solver.</span>
+					<p>SolveDoku is an iterative puzzle solver for sudoku puzzles. It implements the observer pattern, using observers to apply known solving techniques to ultimately eliminate cell candidates.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Jun. 2019 - August 2019</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>C++</li>
 					</ul>
 				</div>
 			</div>
@@ -326,7 +348,7 @@
 		<div class="grid_8 hobbies">
 			<h3>Hobbies</h3>
 			<p><strong>Sports :</strong> Running, swimming (non-competitive)</p>
-			<p><strong>Pastimes :</strong> Gaming, programming</p>
+			<p><strong>Pastimes :</strong> Gaming, programming, driving</p>
 		</div>
 		
 		<!-- Contact -->
@@ -340,7 +362,7 @@
 			</ul>
 			<p>
 				Rather have my resume on paper?<br>
-				<a href="res/CV_Falco_van_der_Meulen_2020-08.pdf" download="CV_Falco_van_der_Meulen_2020-08.pdf">Download PDF version</a>
+				<a href="res/CV_Falco_van_der_Meulen_2020-08.pdf" download="CV_Falco_van_der_Meulen_2020-10.pdf">Download PDF version</a>
 			</p>
 		</div>
 	</section>
