Fixed minor mistakes.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<span class="place">Rotterdam</span>
 					<span class="dates">Aug. 2016 - Jul. 2020</span>
 					<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
-					<span class="extra"><i>Diploma achieved..</i></span>
+					<span class="extra"><i>Diploma achieved.</i></span>
 				</li>
 				<li>
 					<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
@@ -234,7 +234,9 @@
 					<br>
 					<span class="description">Skills:</span>
 					<ul>
-						<li>C++</li>
+						<li>
+							<span class="descrption">C++</span>
+						</li>
 					</ul>
 				</div>
 			</div>
