--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Falco van der Meulen - Computer Engineering Graduate</title>
+<title>Falco van der Meulen - Brunel IT-Specialist</title>
 
 <!-- Fetch CSS -->
 <link rel="stylesheet" href="htmlFiles/css/reset.css">
@@ -20,7 +20,7 @@
 		<div class="container_16">
 				<hgroup>
 					<h1>Falco van der Meulen</h1>
-					<h2>Computer Engineering Graduate</h2>
+					<h2>Brunel IT-Specialist</h2>
 				</hgroup>
 
 				<figure>
@@ -147,7 +147,9 @@
 				<h4><strong>Scrum</strong></h4>
 				<button type="button" class="collapsible">Professional Scrum Master I</button>
 				<div class="content">
-					<p>In progress...</p>
+					<object type="application/pdf" data="res/certificates/Scrum_Professional_Scrum_Master_I.pdf" width="400" height="355">
+						alt : <a href="res/certificates/Scrum_Professional_Scrum_Master_I.pdf">PDF</a>
+					</object>
 				</div>
 			</div>
 		</div>
