--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
@@ -150,6 +150,19 @@
 					<object type="application/pdf" data="res/certificates/Scrum_Professional_Scrum_Master_I.pdf" width="400" height="355">
 						alt : <a href="res/certificates/Scrum_Professional_Scrum_Master_I.pdf">PDF</a>
 					</object>
+				</div>
+			</div>
+			<div class="grid_16">
+				<h4><strong>Microsoft</strong></h4>
+				<button type="button" class="collapsible">AZ-900</button>
+				<div class="content">
+					<object type="application/pdf" data="res/certificates/Microsoft_Azure_Fundamentals.pdf" width="400" height="330">
+						alt : <a href="res/certificates/Microsoft_Azure_Fundamentals.pdf">PDF</a>
+					</object>
+				</div>
+				<button type="button" class="collapsible">MCSA 70-483</button>
+				<div class="content">
+					In progress!
 				</div>
 			</div>
 		</div>
